Jenkins-Server-tf/ec2.tf
resource "aws_instance" "ec2" {
  ami                    = data.aws_ami.ami.image_id
 
  instance_type          = "t3.xlarge" 
  
  key_name               = var.key-name
  subnet_id              = aws_subnet.public-subnet.id
  vpc_security_group_ids = [aws_security_group.security-group.id]
  iam_instance_profile   = aws_iam_instance_profile.instance-profile.name

  root_block_device {
    volume_size = 60
    volume_type = "gp3" 
  }

  user_data = templatefile("./userdata-tools-install.sh", {})

  tags = {
    Name = var.instance-name
  }
}
